e2e/linodemachine-controller/vpc-integration/05-verify-no-linode-instance.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
  - script: |-
      URI="linode/instances" FILTER="{\"tags\":\"linodecluster-test\"}" make callLinodeApiGet | grep 'results": 0'
  - script: |-
      URI="vpcs" FILTER="{\"label\":\"linodevpc-test\"}" make callLinodeApiGet | grep 'results": 0'
