e2e/linodemachine-controller/vpc-integration/01-assert.yaml
apiVersion: infrastructure.cluster.x-k8s.io/v1alpha1
kind: LinodeVPC
metadata:
  name: machine-test-vpc
spec:
  region: us-sea
status:
  ready: true
