e2e/linodemachine-controller/vpc-integration/02-assert.yaml
---
apiVersion: infrastructure.cluster.x-k8s.io/v1alpha1
kind: LinodeMachine
metadata:
  labels:
    cluster.x-k8s.io/cluster-name: vpc-cluster-test
spec:
  region: us-sea
  type: g5-nanode-1
status:
  ready: true
  instanceState: running
---
apiVersion: cluster.x-k8s.io/v1beta1
kind: Machine
metadata:
  labels:
    cluster.x-k8s.io/cluster-name: vpc-cluster-test
spec:
  clusterName: vpc-cluster-test
status:
  bootstrapReady: true
  infrastructureReady: true
